changed to toList()
from collect(Collectors.toList())